Re-submit python and html files after 1st review

--- a/Project 1 - boston_housing/boston_housing.ipynb
+++ b/Project 1 - boston_housing/boston_housing.ipynb
@@ -319,7 +319,7 @@
    },
    "source": [
     "**Answer:**\n",
-    "The model successfully captured the variation of the target value because 92.3% of the variance in Y is predictable from X."
+    "R2 score is used to measure how much variation of the target variable is captured by the model. The higher the R2 score, the more variance is accounted for the regression model, the closers the data falls into the regression line. In this model, 92.3% of the variance in Y is predictable from X therefore it successfully captured the variation of the target value."
    ]
   },
   {
@@ -389,7 +389,7 @@
    },
    "source": [
     "**Answer: **\n",
-    "Spliting a dataset into training and test sets is to verify if the model developed in training set can be generalized to test set. The data in test set is not used for model development and thus it can be used to test model performance. Comparing the model performance in training set and test set can reveal if the model is overfitting or underfitting. "
+    "Spliting a dataset into training and test sets is to verify if the model performs well. Without having a testing set, in case of model having very high train scores, there is no evidence to support if the model overfits the training set. Thus we need a testing set to verify if the model developed in training set can be generalized to test set. The data in test set is not used for model development and thus it provides supporting evidence for the model performance. Comparing the model performance in training set and test set can reveal if the model is overfitting or underfitting. "
    ]
   },
   {
@@ -599,7 +599,7 @@
    },
    "source": [
     "**Answer: **\n",
-    "Grid seach is used to tune model parameters and select the best model. It searches among a grid of parameters, for example two parameters, one is the max_depth = [1,5,10] and the second is the number of training points = [100, 200, 300]. Grid search evaluates the model performance with the combinations of the two parameters and pick the best performer.   "
+    "Grid seach is used to tune hyper-parameters for a model and select the best model based on performance metric. It takes multiple values of each hyper-parameter as inputs, searches among the combination of all values of hyper-parameters, runs the model with the combination of hyper-parameters again cross-validation set, and then selects the model which has the highest performance metric. For example, there are two hyper-parameters, one is the max_depth = [1,5,10] and the second is the number of training points = [100, 200, 300]. Grid search evaluates the model performance with the combinations of the two parameters and pick the best performer.   "
    ]
   },
   {
@@ -799,7 +799,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -831,11 +832,12 @@
    },
    "source": [
     "**Answer: **\n",
-    "* Predicted selling price for Client 1's home: $306,337.50 \n",
+    "* Predicted selling prices for three clients' houses are $306,337.50, $224,342.55, and $930,490.91 respectively. \n",
     "\n",
-    "* Predicted selling price for Client 2's home: $224,342.55\n",
+    "* The predicted price for home 1 is about one standard deviation below the median, and it is higher than that of home 2 and lower than that of home 3. This home has a median number of rooms, median neiborhood poverty and median student-teach ratio comparing with other two homes. Therefore the price for this home is in between the prices for the other two. \n",
     "\n",
-    "* Predicted selling price for Client 3's home: $930,490.91"
+    "* Home 2 has the least number of rooms, highest neiborhood poverty ratio and highest student-teacher ratio among three homes. All these factors have negative impact on housing price. Therefore the price for this home is lowest among three and is much lower than median price in the market.\n",
+    "* Home 3 has a big number of rooms, very low neighborhood poverty level and a low student-teacher ratio - all these three factors are much better than the ones for the other two. Therefor the predicted price is much higher than median house price in the market as well as the prices for other two houses."
    ]
   },
   {
