--- a/Capstone Project/Women's E-commerce Clothing Reviews.ipynb
+++ b/Capstone Project/Women's E-commerce Clothing Reviews.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -62,7 +62,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Data Exploration"
    ]
@@ -217,6 +220,8 @@
    "execution_count": 14,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -250,31 +255,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 131,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.77527037383973429"
+       "0.10248658775440687"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df.Rating==4) | (df.Rating==5)].count()['Clothing ID']/df.count()['Clothing ID']"
+    "df[(df.Rating==1) | (df.Rating==2)].count()['Clothing ID']/df.count()['Clothing ID']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -306,7 +315,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -342,7 +353,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -373,7 +386,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Data Processing"
    ]
@@ -461,7 +477,9 @@
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -496,7 +514,9 @@
    "cell_type": "code",
    "execution_count": 125,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1845,7 +1865,9 @@
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2185,14 +2207,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Model Evaluation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Model 1 is selected. Evaluate the model performance on test set"
    ]
@@ -2201,7 +2229,9 @@
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2222,7 +2252,9 @@
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
